# Proyecto1_Datos2

./: CMakeCache.txt  CMakeLists.txt  Client.cpp  Client.h  Makefile  MetaData.cpp  MetaData.h  Proyecto1_Datos2  Proyecto1_Datos2.cbp  Proyecto1_Datos2_automoc.cpp  Server  alice  cmake_install.cmake  main  main.cpp  moc_ide_cfactorial.cpp  mserver  mserver.cpp  mserver.h  server
Proyecto1_Datos2_autogen/: mocs_compilation.cpp
Proyecto1_Datos2_autogen/QM7UNKGVG2/: moc_ide_cfactorial.cpp
forms/: ide_cfactorial.cpp  ide_cfactorial.h  ide_cfactorial.ui
